Testing html edit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Anthony Ngo</title>
+  </head>
+  <body>
+    <<p>University of Washington</p>
+    <<p>Ngo.D.Anthony@gmail.com</p>
+  </body>
+</html>
