--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Anthony Ngo</title>
-  </head>
-  <body>
-    <<p>University of Washington</p>
-    <<p>Ngo.D.Anthony@gmail.com</p>
-  </body>
+<!DOCTYPE html>
+<html>
+    <head>
+      <meta charset="utf-8">
+        <title>Anthony Ngo | Get to Know Me </title>
+        <style>
+        body {
+          color : #b8eeff
+        }
+
+        body {
+          font-family: "Calibri"
+        }
+
+        body {
+          background-color: #579DB3
+        }
+
+        .intro {
+          background-color: : #579DB3
+        }
+        </style>
+    </head>
+    <body>
+      <h2>Hi, I'm </h2>
+      <h1> ANTHONY </h1>
+      <img src="imgs/Face.png" alt="Vectorized Me" style="width:500px">
+      <br>
+      <br>
+      <p>Hey, I'm Anthony. I'm a student at the University of Washington </p>
+      <a href = "SupplementaryFiles/Resume.pdf">Resume</a>
+    </body>
 </html>
