--- a/index.html
+++ b/index.html
@@ -2,32 +2,35 @@
 <html>
     <head>
       <meta charset="utf-8">
-        <title>Anthony Ngo | Get to Know Me </title>
+        <title>Hey, I'm Anthony </title>
+        <link rel="icon"
+      type="image/png"
+      href="imgs/Icon.png">
         <style>
         body {
           color : #b8eeff
         }
 
         body {
-          font-family: "Calibri"
+          font-family: "Roboto"
         }
 
         body {
           background-color: #579DB3
         }
 
-        .intro {
-          background-color: : #579DB3
-        }
         </style>
     </head>
     <body>
-      <h2>Hi, I'm </h2>
-      <h1> ANTHONY </h1>
-      <img src="imgs/Face.png" alt="Vectorized Me" style="width:500px">
+        <h2>Hi, I'm </h2>
+      <h1 style = "font-size: 5vw"> &#8212; ANTHONY &#8212; </h1>
+          <h3> Developer + Designer</h3>
+      <img src="imgs/Face.png" alt="Vectorized Me" style="width:600px">
       <br>
       <br>
-      <p>Hey, I'm Anthony. I'm a student at the University of Washington </p>
-      <a href = "SupplementaryFiles/Resume.pdf">Resume</a>
+        <h2><strong> Who am I? </strong></h2>
+      <p>I'm a student at the University of Washington  </p>
+      <a href = "SupplementaryFiles/Resume.pdf" target = _blank ><img src = "imgs/ResumeButton.png" alt = "Resume Button" style = "width: 150px"></a>
+        <h2> <strong>Stuff I've Done</strong> </h2>
     </body>
 </html>
