--- a/index.html
+++ b/index.html
@@ -5,32 +5,118 @@
         <title>Hey, I'm Anthony </title>
         <link rel="icon"
       type="image/png"
-      href="imgs/Icon.png">
+      href="imgs/Icon_4_black.png">
         <style>
+        :root{
+          --accent-color: #52bdff;
+          --background-color: #f5f5f5;
+        }
         body {
-          color : #b8eeff
+          font-family: "Helvetica";
+          background-color: var(--background-color);
+          text-align: left;
         }
 
-        body {
-          font-family: "Roboto"
+        .navbar {
+          overflow: hidden;
+          color: var(--background-color);
+          background-color: var(--accent-color);
+          position: fixed; /* Set the navbar to fixed position */
+          top: 0;
+          left:0;
+          width: 100%; /* Full width */
+          font-size: 30px;
         }
 
-        body {
-          background-color: #579DB3
+        .navbar a {
+          display: block;
+          color: inherit;
+          text-align: center;
+          padding: 14px 16px;
+
+          text-decoration: none;
         }
+        .navbar a:hover {
+          background-color:rgba(0,0,0,0.1);
+        }
+        .main {
+          margin-left: 100px;
+          margin-right:100px;
+          text-align: center;
+        }
+
+        .main img {
+          width: 300px;
+          padding-right: 20px;
+          padding-top: 10px;
+        }
+
+        .main img:hover{
+          width: 305px;
+          padding-right: 15px;
+          padding-top: 0px;
+          filter:brightness(0.9);
+        }
+
+        .intro{
+          margin-top: 120px;
+          line-height: 2px;
+          margin-left: 100px;
+          margin-right:100px;
+          color: var(--accent-color);
+        }
+
+        .end{
+          text-align: center;
+          margin-left: 0px;
+          margin-right: 0px;
+        }
+        .end a:hover{
+          opacity: 0.7
+        }
+
 
         </style>
     </head>
-    <body>
-        <h2>Hi, I'm </h2>
-      <h1 style = "font-size: 5vw"> &#8212; ANTHONY &#8212; </h1>
-          <h3> Developer + Designer</h3>
-      <img src="imgs/Face.png" alt="Vectorized Me" style="width:600px">
-      <br>
-      <br>
-        <h2><strong> Who am I? </strong></h2>
-      <p>I'm a student at the University of Washington  </p>
-      <a href = "SupplementaryFiles/Resume.pdf" target = _blank ><img src = "imgs/ResumeButton.png" alt = "Resume Button" style = "width: 150px"></a>
-        <h2> <strong>Stuff I've Done</strong> </h2>
-    </body>
+
+    <div class = "navbar">
+      <img src = imgs/Icon_4_white.png style = "width: 50px; float: left; padding: 7px 17px">
+      <a href = "SupplementaryFiles/Resume.pdf" target = _blank style = "float: right; padding: 15px">
+        <strong>RESUME</strong>
+      </a>
+    </div>
+
+    <div class = "intro">
+      <h3 style = "filter:opacity(0.5)">Hi, I'm </h2>
+    <h1 style="color:var(--accent-color); font-size:50px"> ANTHONY </h1>
+        <h3 style = "filter:opacity(0.6)"> Student and Aspiring Data Scientist</h3>
+    <!-- <img src="imgs/Face.png" alt="Vectorized Me" style="width:600px; float: right"> -->
+    </div>
+
+
+    <div class = "main">
+      <hr style = "margin-bottom: 40px; margin-top: 30px">
+      <a>
+        <img src = "imgs/NeuroLex.png">
+      </a>
+      <a>
+        <img src = "imgs/NeuroLex.png">
+      </a>
+      <a>
+        <img src = "imgs/NeuroLex.png">
+      </a>
+    </div>
+    <div class = "end">
+      <hr style = "margin-bottom: 40px; margin-top:30px">
+      <img src = imgs/Icon_4_black.png style = "width: 50px; margin-top: 20px">
+      <!-- <hr style="text-align: center; width: 70px" size = 3; color = #333> -->
+      <p>ngo.d.anthony@gmail.com</p>
+      <a href = "https://github.com/AnthonyDinhNgo" target="_blank" style = "text-decoration: none;">
+        <img src = imgs/GitHub_logo.png style = "width:50px">
+      </a>
+      <a href = "https://www.linkedin.com/in/anthony-ngo-0047b916a/" target="_blank">
+        <img src = imgs/LinkedIn_logo.png style = "width:50px; padding-left: 5px;">
+      </a>
+    </href>
+    </div>
 </html>
