Separated style.css file and added navbar to NeuroLex

--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
     <!-- <img src="imgs/Face.png" alt="Vectorized Me" style="width:600px; float: right"> -->
     </div>
 
-
     <div class = "main">
       <hr style = "margin-bottom: 40px; margin-top: 30px">
-      <a>
+      <a href = "SupplementaryFiles/ProjectPages/NeuroLex.html">
         <img src = "imgs/NeuroLex.png">
       </a>
       <a>
