Added to the projects

--- a/SupplementaryFiles/ProjectPages/NeuroLex.html
+++ b/SupplementaryFiles/ProjectPages/NeuroLex.html
@@ -3,6 +3,12 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="../light_style.css">
+  <style>
+  :root{
+    --accent-color: #5abbe8;
+    --background-color: #f5f5f5;
+  }
+  </style>
   <!-- <link rel="import" href="../navbar.html"> -->
 </head>
 <body>
