--- a/index.html
+++ b/index.html
@@ -6,75 +6,7 @@
         <link rel="icon"
       type="image/png"
       href="imgs/Icon_4_black.png">
-        <style>
-        :root{
-          --accent-color: #52bdff;
-          --background-color: #f5f5f5;
-        }
-        body {
-          font-family: "Helvetica";
-          background-color: var(--background-color);
-          text-align: left;
-        }
-
-        .navbar {
-          overflow: hidden;
-          color: var(--background-color);
-          background-color: var(--accent-color);
-          position: fixed; /* Set the navbar to fixed position */
-          top: 0;
-          left:0;
-          width: 100%; /* Full width */
-          font-size: 30px;
-        }
-
-        .navbar a {
-          display: block;
-          color: inherit;
-          text-align: center;
-          padding: 14px 16px;
-
-          text-decoration: none;
-        }
-        .navbar a:hover {
-          background-color:rgba(0,0,0,0.1);
-        }
-        .main {
-          margin-left: 100px;
-          margin-right:100px;
-          text-align: center;
-        }
-
-        .main img {
-          width: 300px;
-          padding-right: 20px;
-          padding-top: 10px;
-        }
-
-        .main img:hover{
-          width: 305px;
-          padding-right: 15px;
-          padding-top: 0px;
-          filter:brightness(0.9);
-        }
-
-        .intro{
-          margin-top: 120px;
-          line-height: 2px;
-          margin-left: 100px;
-          margin-right:100px;
-          color: var(--accent-color);
-        }
-
-        .end{
-          text-align: center;
-          margin-left: 0px;
-          margin-right: 0px;
-        }
-        .end a:hover{
-          opacity: 0.7
-        }
-
+        <link rel="stylesheet" type="text/css" href="SupplementaryFiles/light_style.css">
 
         </style>
     </head>
@@ -95,14 +27,16 @@
 
     <div class = "main">
       <hr style = "margin-bottom: 40px; margin-top: 30px">
+
+      <h2 style = "color: #676a88; font-family: 'Trebuchet MS'; "> My Projects </h2>
       <a href = "SupplementaryFiles/ProjectPages/NeuroLex.html">
         <img src = "imgs/NeuroLex.png">
       </a>
       <a>
-        <img src = "imgs/NeuroLex.png">
+        <img src = "imgs/AAC.png">
       </a>
       <a>
-        <img src = "imgs/NeuroLex.png">
+        <img src = "imgs/MRA.png">
       </a>
     </div>
     <div class = "end">
