Edited Neurolex files

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     </head>
 
     <div class = "navbar">
-      <img src = imgs/Icon_4_white.png style = "width: 50px; float: left; padding: 7px 17px">
-      <a href = "SupplementaryFiles/Resume.pdf" target = _blank style = "float: right; padding: 15px">
+      <a>
+        <img src = imgs/Icon_4_white.png style = "width: 50px; float: left; padding: 10px">
+      </a>
+      <a href = "SupplementaryFiles/Resume.pdf" target = _blank style = "float: right; padding: 20px">
         <strong>RESUME</strong>
       </a>
     </div>
@@ -28,7 +30,7 @@
     <div class = "main">
       <hr style = "margin-bottom: 40px; margin-top: 30px">
 
-      <h2 style = "color: #676a88; font-family: 'Trebuchet MS'; "> My Projects </h2>
+      <h2 style = "color: #676a88 "> My Projects </h2>
       <a href = "SupplementaryFiles/ProjectPages/NeuroLex.html">
         <img src = "imgs/NeuroLex.png">
       </a>
