--- a/SupplementaryFiles/ProjectPages/NeuroLex.html
+++ b/SupplementaryFiles/ProjectPages/NeuroLex.html
@@ -2,27 +2,80 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+    <title>My Work with NeuroLex</title>
+    <link rel="icon"
+  type="image/png"
+  href="../../imgs/Icon_4_black.png">
   <link rel="stylesheet" type="text/css" href="../light_style.css">
   <style>
+  body{
+    font-family: "Trebuchet MS";
+  }
+
   :root{
     --accent-color: #5abbe8;
     --background-color: #f5f5f5;
   }
+
+
   </style>
   <!-- <link rel="import" href="../navbar.html"> -->
 </head>
 <body>
-  <div class = "navbar">
-    <a href = "../../index.html" style = "padding: 0px 0px">
-      <img src = ../../imgs/Icon_4_white.png style = "width: 50px; float: left; padding: 7px 17px">
+  <div class = "navbar" style = "-webkit-filter: drop-shadow(0px 0px 0px #5c5c5c); filter: drop-shadow(0px 0px 0px #5c5c5c);">
+    <a href = "../../index.html" style = "">
+      <img src = ../../imgs/Icon_4_white.png style = "width: 50px; float: left; padding: 10px">
     </a>
-    <a href = "../Resume.pdf" target = _blank style = "float: right; padding: 15px">
+    <a href = "../Resume.pdf" target = _blank style = "float: right; padding: 20px">
       <strong>RESUME</strong>
     </a>
   </div>
+  <a href = "https://www.neurolex.ai/" target = _blank>
+    <img
+    src = "../../imgs/NeuroLexLogo.png"
+     style = "display:block; margin-top: 150px; margin-left: auto; margin-right: auto; width: 50%;">
+   </a>
+  <div class = "project_intro" style = "margin-top: 0px">
+    <h1>
+      Computational Neuroscience Research
+    </h1>
+    <h2 style = "color:#d6d6d6">
+      2018 - Present
+    </h2>
+    <br>
+  </div>
+  <hr>
+  <div class = "main" style = "margin-top:50px;">
+    <h2>
+      My Role
+    </h2>
+    <p style = "color: #676a88">
+      Involved in computational undergraduate research on Alzheimer's Disease and Dementia
+    </p>
+  </div>
+
+  <img src = "../../imgs/soundWave.png" style = "width: 70%; margin-top: 70px; display:block; margin-left: auto; margin-right: auto">
+
+  <div class = "project_main alt1" style = "background-color: #d7f1ff; color: var(--accent-color);">
+    <br>
+    <h3>
+      Exploratory Data Analysis
+    </h3>
+
+    <p>
+      One of my major projects to perform exploratory data analysis on Alzheimer's
+      Disease and Dementia Data from the Framingham Heart Study, primarily looking
+      at linguistic and vocal features. The goal was find possible connections between the
+      way someone speaks and their cognitive status. I found two significant patterns,
+      one of which was included in an academic paper later on. I spent around five months
+      on data exploration through Python and Pandas
+    </p>
+    <br>
+  </div>
 
   <div class = "end">
-    <hr style = "margin-bottom: 40px; margin-top:100px">
+    <hr style = "margin-bottom: 40px; margin-top:50px">
     <img src = ../../imgs/Icon_4_black.png style = "width: 50px; margin-top: 20px">
     <!-- <hr style="text-align: center; width: 70px" size = 3; color = #333> -->
     <p>ngo.d.anthony@gmail.com</p>
