Added data vis and paper contribution

--- a/SupplementaryFiles/ProjectPages/NeuroLex.html
+++ b/SupplementaryFiles/ProjectPages/NeuroLex.html
@@ -57,7 +57,7 @@
 
   <img src = "../../imgs/soundWave.png" style = "width: 70%; margin-top: 70px; display:block; margin-left: auto; margin-right: auto">
 
-  <div class = "project_main alt1" style = "background-color: #d7f1ff; color: var(--accent-color);">
+  <div class = "project_main alt1" style = "background-color: #d7f1ff; color: var(--accent-color); margin-top: 100px">
     <br>
     <h3>
       Exploratory Data Analysis
@@ -74,8 +74,38 @@
     <br>
   </div>
 
+  <div class = "project_main alt2" style = "background-color: var(--background-color); color: var(--accent-color);">
+    <br>
+    <h3>
+      Data Visualization
+    </h3>
+
+    <p>
+      My second role with NeuroLex Labs involved creating concise
+      and efficient data visualization that would effectively communicate the
+      trends I found during my exploratory analysis.
+    </p>
+    <br>
+  </div>
+
+  <div class = "project_main alt1" style = "background-color: #d7f1ff; color: var(--accent-color);">
+    <br>
+    <h3>
+    Contribute to a Paper
+   </h3>
+
+    <p>
+      I concluded my first year with NeuroLex Labs by becoming a contributing
+      author on one of their research papers. I provided a thorough explanation
+      of my findings from my exploratory analysis, a discussion on why we used
+      certain python toolkits (like SpaCy and NLTK), and included a few of my
+      data visualizations
+    </p>
+    <br>
+  </div>
+
   <div class = "end">
-    <hr style = "margin-bottom: 40px; margin-top:50px">
+    <!-- <hr style = "margin-bottom: 40px; margin-top:50px"> -->
     <img src = ../../imgs/Icon_4_black.png style = "width: 50px; margin-top: 20px">
     <!-- <hr style="text-align: center; width: 70px" size = 3; color = #333> -->
     <p>ngo.d.anthony@gmail.com</p>
