--- a/SupplementaryFiles/ProjectPages/NeuroLex.html
+++ b/SupplementaryFiles/ProjectPages/NeuroLex.html
@@ -32,8 +32,7 @@
     </a>
   </div>
   <a href = "https://www.neurolex.ai/" target = _blank>
-    <img
-    src = "../../imgs/NeuroLexLogo.png"
+    <img src = "../../imgs/NeuroLexLogo.png"
      style = "display:block; margin-top: 150px; margin-left: auto; margin-right: auto; width: 50%;">
    </a>
   <div class = "project_intro" style = "margin-top: 0px">
@@ -64,9 +63,9 @@
     </h3>
 
     <p>
-      One of my major projects to perform exploratory data analysis on Alzheimer's
+      I began my work with NeuroLex by performing exploratory data analysis on Alzheimer's
       Disease and Dementia Data from the Framingham Heart Study, primarily looking
-      at linguistic and vocal features. The goal was find possible connections between the
+      at linguistic and vocal features. The goal was to find possible connections between the
       way someone speaks and their cognitive status. I found two significant patterns,
       one of which was included in an academic paper later on. I spent around five months
       on data exploration through Python and Pandas
@@ -98,7 +97,7 @@
       I concluded my first year with NeuroLex Labs by becoming a contributing
       author on one of their research papers. I provided a thorough explanation
       of my findings from my exploratory analysis, a discussion on why we used
-      certain python toolkits (like SpaCy and NLTK), and included a few of my
+      certain python toolkits (like SpaCy and NLTK), and a few of my
       data visualizations
     </p>
     <br>
