Changed to black banner

--- a/SupplementaryFiles/ProjectPages/NeuroLex.html
+++ b/SupplementaryFiles/ProjectPages/NeuroLex.html
@@ -90,12 +90,13 @@
   <div class = "project_main alt1" style = "background-color: #d7f1ff; color: var(--accent-color);">
     <br>
     <h3>
-    Contribute to a Paper
+    Co-Author a Paper
    </h3>
 
     <p>
       I concluded my first year with NeuroLex Labs by becoming a contributing
-      author on one of their research papers. I provided a thorough explanation
+      author on a paper surrounding vocal indicators of degenerative
+      neurological diseases. I provided a thorough explanation
       of my findings from my exploratory analysis, a discussion on why we used
       certain python toolkits (like SpaCy and NLTK), and a few of my
       data visualizations
