Added AAC Analysis project

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <img src = "imgs/NeuroLex.png">
       </a>
 
+      <a href = "SupplementaryFiles/ProjectPages/AAC.html">
+        <img src = "imgs/AAC/AAC.png">
+      </a>
+
     </div>
     <div class = "end">
       <hr style = "margin-bottom: 40px; margin-top:30px">
