--- a/SupplementaryFiles/ProjectPages/AAC.html
+++ b/SupplementaryFiles/ProjectPages/AAC.html
@@ -3,23 +3,37 @@
 
 <head>
   <meta charset="utf-8">
-    <title>My Work with NeuroLex</title>
+    <title>Working with AAC Data</title>
     <link rel="icon"
   type="image/png"
   href="../../imgs/Icon_4_black.png">
   <link rel="stylesheet" type="text/css" href="../light_style.css">
   <style>
   body{
-    font-family: "Trebuchet MS";
+    font-family: "Arial";
   }
 
   :root{
     --accent-color: #f0bd64;
     --background-color: #f5f5f5;
-    --alt-background-color: #fae3ba;
+    --alt-background-color: #ffedcf;
   }
 
-
+  .main a {
+    display: inline-block;
+    vertical-align: top; /* Adjust if multi-line text */
+    color: #333;
+    text-align: center;
+    text-decoration: none;
+    }
+    .main a img {
+        display: block;
+        margin: auto;
+        border: 0;
+    }
+    .main a span {
+        display: block;
+    }
   </style>
   <!-- <link rel="import" href="../navbar.html"> -->
 </head>
@@ -32,78 +46,55 @@
       <strong>RESUME</strong>
     </a>
   </div>
-  <a href = "https://www.neurolex.ai/" target = _blank>
-    <img src = "../../imgs/NeuroLexLogo.png"
+  <a href = "http://www.austintexas.gov/department/aac" target = _blank>
+    <img src = "../../imgs/AAC/AAC_logo.png"
      style = "display:block; margin-top: 150px; margin-left: auto; margin-right: auto; width: 50%;">
    </a>
   <div class = "project_intro" style = "margin-top: 0px">
     <h1>
-      Computational Neuroscience Research
+      Shiny App
     </h1>
     <h2 style = "color:#d6d6d6">
-      2018 - Present
+      July - September, 2019
     </h2>
     <br>
   </div>
   <hr>
   <div class = "main" style = "margin-top:50px;">
     <h2>
-      My Role
+      What I did
     </h2>
     <p style = "color: #676a88">
-      Involved in computational undergraduate research on Alzheimer's Disease and Dementia
+      Exploratory Analysis on the the Austin Animal Shelter Dataset using R. The Austin Animal Center is the largest no-kill animal shelter in the United States that provides care and shelter to over 18,000 animals each year. The time frame for all visualizations is from 2013 Q4 to 2018 Q1.
     </p>
   </div>
 
-  <img src = "../../imgs/soundWave.png" style = "width: 70%; margin-top: 70px; display:block; margin-left: auto; margin-right: auto">
+  <img src = "../../imgs/AAC/cats_dogs_banner.png" style = "width: 70%; margin-top: 70px; display:block; margin-left: auto; margin-right: auto">
 
-  <div class = "project_main alt1" style = "background-color: var(--alt-background-color); color: var(--accent-color); margin-top: 100px">
-    <br>
-    <h3>
-      Exploratory Data Analysis
-    </h3>
+  <div class = "main">
+    <hr style = "margin-bottom: 40px; margin-top: 30px">
 
-    <p>
-      I began my work with NeuroLex by performing exploratory data analysis on Alzheimer's
-      Disease and Dementia Data from the Framingham Heart Study, primarily looking
-      at linguistic and vocal features. The goal was to find possible connections between the
-      way someone speaks and their cognitive status. I found two significant patterns,
-      one of which was included in an academic paper later on. I spent around five months
-      on data exploration through Python and Pandas
-    </p>
-    <br>
+    <h2 style = "color: #676a88 "> The Project </h2>
+
+    <a href = "https://adngo.shinyapps.io/AAC_Analysis/"
+    target = _blank>
+      <img src = "../../imgs/AAC/shinyLogo.png" style = "width: 40%;">
+      <br>
+      <span><h2 style = "color: #4b4d63">The Published App</h2></span>
+    </a>
+
+    <a href = "https://github.com/AnthonyDinhNgo/AAC_Analysis"
+    target = _blank>
+      <img src =  "../../imgs/AAC/octocat.png" style = "width: 50%;">
+      <br>
+      <span><h2 style = "color: #4b4d63">The Code</h2></span>
+    </a>
+
   </div>
 
-  <div class = "project_main alt2" style = "background-color: var(--background-color); color: var(--accent-color);">
-    <br>
-    <h3>
-      Data Visualization
-    </h3>
 
-    <p>
-      My second role with NeuroLex Labs involved creating concise
-      and efficient data visualization that would effectively communicate the
-      trends I found during my exploratory analysis.
-    </p>
-    <br>
-  </div>
+  <hr style = "margin-top: 10%; padding-bottom: 5%">
 
-  <div class = "project_main alt1" style = "background-color: var(--alt-background-color); color: var(--accent-color);">
-    <br>
-    <h3>
-    Co-Author a Paper
-   </h3>
-
-    <p>
-      I concluded my first year with NeuroLex Labs by becoming a contributing
-      author on a paper surrounding vocal indicators of degenerative
-      neurological diseases. I provided a thorough explanation
-      of my findings from my exploratory analysis, a discussion on why we used
-      certain python toolkits (like SpaCy and NLTK), and a few of my
-      data visualizations
-    </p>
-    <br>
-  </div>
 
   <div class = "end">
     <!-- <hr style = "margin-bottom: 40px; margin-top:50px"> -->
